--- a/Source/core/inspector/InspectorOverlayPage.html
+++ b/Source/core/inspector/InspectorOverlayPage.html
@@ -89,29 +89,30 @@ body.platform-linux {
     box-sizing: border-box;
 }
 
-.controls-line button {
+.controls-line .button {
     width: 26px;
     margin-left: -1px;
     margin-right: 0;
     padding: 0;
 }
 
-.controls-line button:hover {
+.controls-line .button:hover {
     cursor: pointer;
 }
 
-.controls-line button .glyph {
+.controls-line .button .glyph {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.75);
     opacity: 0.8;
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: center;
+    position: relative;
 }
 
-.controls-line button:active {
-    border: 1px solid rgb(120, 120, 120);
-    z-index: 1;
+.controls-line .button:active .glyph {
+    top: 1px;
+    left: 1px;
 }
 
 #resume-button .glyph {
@@ -684,8 +685,8 @@ document.addEventListener("keydown", onDocumentKeyDown);
 <body class="fill">
 <div class="controls-line">
     <div class="message-box"><div id="paused-in-debugger"></div></div>
-    <button id="resume-button" title="Resume script execution (F8)."><div class="glyph"></div></button>
-    <button id="step-over-button" title="Step over next function call (F10)."><div class="glyph"></div></button>
+    <div class="button" id="resume-button" title="Resume script execution (F8)."><div class="glyph"></div></div>
+    <div class="button" id="step-over-button" title="Step over next function call (F10)."><div class="glyph"></div></div>
 </div>
 </body>
 <canvas id="canvas" class="fill"></canvas>
