--- a/LayoutTests/editing/selection/caret-and-focus-ring.html
+++ b/LayoutTests/editing/selection/caret-and-focus-ring.html
@@ -24,7 +24,8 @@ function runTest() {
 <title>Caret and Focus Halo</title> 
 </head>
 <body>
-<p>This tests that the caret and the focus halo are not displayed when the WebView is not focused (using the pixel output from DumpRenderTree).</p><div id="editme" contenteditable="true">This is an <span id="test">editable</span> region. No caret or focus ring should appear in the pixel results.</div>
+<p>This tests that the caret and the focus halo are not displayed when the WebView is not focused (using the pixel output from DumpRenderTree).</p>
+<div id="editme" contenteditable="true">This is an <span id="test">editable</span> region. No caret or focus ring should appear in the pixel results.</div>
 
 <script>runTest();</script>
 
