Remove the fullScreenEnabled setting
Chromium always calls setFullScreenEnabled(true).

BUG=344002

Review URL: https://codereview.chromium.org/217163004

git-svn-id: svn://svn.chromium.org/blink/trunk@170351 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/media/video-controls-fullscreen-with-controller.html
+++ b/LayoutTests/media/video-controls-fullscreen-with-controller.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="log"></div>
-        <script>fullscreen_test(new MediaController(), true);</script>
+        <script>fullscreen_test(new MediaController());</script>
     </body>
 </html>
