--- a/LayoutTests/media/video-controls-fullscreen.html
+++ b/LayoutTests/media/video-controls-fullscreen.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="log"></div>
-        <script>fullscreen_test(null, true);</script>
+        <script>fullscreen_test(null);</script>
     </body>
 </html>
