Use [StrictTypeChecking] for HTMLMediaElement.setMediaKeys
The mediaKeys argument should be nullable, but passing in some other
type of object should throw an exception.

BUG=none

Review URL: https://codereview.chromium.org/212643002

git-svn-id: svn://svn.chromium.org/blink/trunk@170354 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/media/encrypted-media/encrypted-media-setmediakeys.html
+++ b/LayoutTests/media/encrypted-media/encrypted-media-setmediakeys.html
@@ -19,6 +19,9 @@
                 run('video.setMediaKeys(null)');
                 testExpected('video.mediaKeys', null);
 
+                consoleWrite("Try setting mediaKeys to the wrong type of object.");
+                testException('video.setMediaKeys(new Date())', '"TypeError: Failed to execute \'setMediaKeys\' on \'HTMLMediaElement\': parameter 1 is not of type \'MediaKeys\'."');
+
                 consoleWrite("Create a MediaKeys object and assign it to video.");
                 run('mediaKeys = new MediaKeys("org.w3.clearkey")');
                 testExpected('mediaKeys', null, '!=');
