--- a/LayoutTests/animations/interpolation/perspective-interpolation.html
+++ b/LayoutTests/animations/interpolation/perspective-interpolation.html
@@ -29,7 +29,7 @@
 <script src="resources/interpolation-test.js"></script>
 <script>
 assertInterpolation({
-  property: 'perspective',
+  property: '-webkit-perspective',
   from: '50px',
   to: '100px'
 }, [
