--- a/LayoutTests/media/video-enter-fullscreen-without-user-gesture.html
+++ b/LayoutTests/media/video-enter-fullscreen-without-user-gesture.html
@@ -1,24 +1,16 @@
 <html>
     <head>
-        <title>Test that video webkitRequestFullscreen() works without any user gesture if the requirement is removed.</title>
+        <title>Test webkitRequestFullscreen() without any user gesture.</title>
         <script src=media-file.js></script>
         <script src=video-test.js></script>
         <script>
-            if (window.internals)
-                window.internals.settings.setMediaFullscreenRequiresUserGesture(false);
-
             function canplaythrough()
             {
                 consoleWrite("");
                 consoleWrite("* No user gesture initiated");
                 testExpected("video.paused", true);
                 run("video.webkitRequestFullscreen()");
-                waitForEvent('webkitfullscreenchange', fullscreenchange);
-            }
-
-            function fullscreenchange()
-            {
-                endTest();
+                waitForEvent('webkitfullscreenerror', endTest);
             }
 
             function start()
@@ -31,7 +23,7 @@
     </head>
 
     <body onload="start()">
-    <p>Test that video webkitRequestFullscreen() works without any user gesture if the requirement is removed.</p>
+    <p>Test webkitRequestFullscreen() without any user gesture.</p>
     <video controls></video>
     </body>
 </html>
