--- a/LayoutTests/inspector/console/console-dir-global.html
+++ b/LayoutTests/inspector/console/console-dir-global.html
@@ -22,7 +22,7 @@ function test()
         }
         if (result.type === "error")
             testController.notifyDone("Exception:" + result);
-        var objectProxy = WebInspector.RemoteObject.fromPayload(result);
+        var objectProxy = WebInspector.runtimeModel.createRemoteObject(result);
         objectProxy.getOwnProperties(getPropertiesCallback);
     }
 
