--- a/LayoutTests/inspector/elements/styles/styles-new-API.html
+++ b/LayoutTests/inspector/elements/styles/styles-new-API.html
@@ -340,7 +340,7 @@ function test()
                     InspectorTest.completeTest();
                     return;
                 }
-                callback(WebInspector.CSSStyleDeclaration.parsePayload(payload));
+                callback(WebInspector.CSSStyleDeclaration.parsePayload(WebInspector.cssModel, payload));
             }
 
             function stylesCallback(error, matchedCSSRules)
@@ -360,7 +360,7 @@ function test()
                 // padding-top: 1px; [d]
 
                 var styleId = matchedCSSRules[1].rule.style.styleId;
-                var orm = WebInspector.CSSStyleDeclaration.parsePayload(matchedCSSRules[1].rule.style);
+                var orm = WebInspector.CSSStyleDeclaration.parsePayload(WebInspector.cssModel, matchedCSSRules[1].rule.style);
                 orm.propertyAt(0).setDisabled(true, step1);
 
                 function step1(orm)
