--- a/LayoutTests/inspector/profiler/webgl/webgl-get-resource-state-buffer-data.html
+++ b/LayoutTests/inspector/profiler/webgl/webgl-get-resource-state-buffer-data.html
@@ -108,7 +108,7 @@ function test()
                 if (!remoteObject)
                     InspectorTest.addResult("FAIL: Internal error in the protocol: no \"remoteObject\" property in a CallArgument");
                 else {
-                    var obj = WebInspector.RemoteObject.fromPayload(remoteObject);
+                    var obj = WebInspector.runtimeModel.createRemoteObject(remoteObject);
                     obj.getOwnProperties(didGetOwnProperties.bind(null, descriptor.value.description));
                     return;
                 }
