--- a/LayoutTests/inspector/runtime/runtime-localStorage-getProperties.html
+++ b/LayoutTests/inspector/runtime/runtime-localStorage-getProperties.html
@@ -11,7 +11,7 @@ function test()
 
     function step1(error, result, wasThrown)
     {
-        var localStorageHandle = WebInspector.RemoteObject.fromPayload(result);
+        var localStorageHandle = WebInspector.runtimeModel.createRemoteObject(result);
         localStorageHandle.getOwnProperties(step2);
     }
 
