DevTools: [wip] move Elements panel off WebInspector.domModel and single tree outline.
R=sergeyv@chromium.org

Review URL: https://codereview.chromium.org/218703002

git-svn-id: svn://svn.chromium.org/blink/trunk@170453 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/inspect-element.html
+++ b/LayoutTests/http/tests/inspector/inspect-element.html
@@ -6,8 +6,7 @@
 
 function test()
 {
-    WebInspector.inspectorView.showPanel("elements").treeOutline.
-        addEventListener(WebInspector.ElementsTreeOutline.Events.SelectedNodeChanged, selectedNodeChanged, this);
+    InspectorTest.firstElementsTreeOutline().addEventListener(WebInspector.ElementsTreeOutline.Events.SelectedNodeChanged, selectedNodeChanged, this);
     function selectedNodeChanged(event)
     {
         var node = event.data;
