--- a/LayoutTests/inspector/elements/edit-dom-actions.html
+++ b/LayoutTests/inspector/elements/edit-dom-actions.html
@@ -24,7 +24,7 @@ function test()
 
             function testBody(node, done)
             {
-                var treeElement = WebInspector.panels.elements.treeOutline.findTreeElement(node);
+                var treeElement = InspectorTest.firstElementsTreeOutline().findTreeElement(node);
                 treeElement.remove();
                 InspectorTest.runAfterPendingDispatches(done);
             }
@@ -119,7 +119,7 @@ function test()
 
             function testBody(node, done)
             {
-                var treeElement = WebInspector.panels.elements.treeOutline.findTreeElement(node);
+                var treeElement = InspectorTest.firstElementsTreeOutline().findTreeElement(node);
                 treeElement._editAsHTML();
                 InspectorTest.runAfterPendingDispatches(step2);
 
@@ -141,7 +141,7 @@ function test()
 
             function testBody(node, done)
             {
-                var treeElement = WebInspector.panels.elements.treeOutline.findTreeElement(node);
+                var treeElement = InspectorTest.firstElementsTreeOutline().findTreeElement(node);
                 treeElement._editAsHTML();
                 InspectorTest.runAfterPendingDispatches(step2);
 
@@ -163,7 +163,7 @@ function test()
 
             function testBody(node, done)
             {
-                var treeElement = WebInspector.panels.elements.treeOutline.findTreeElement(node);
+                var treeElement = InspectorTest.firstElementsTreeOutline().findTreeElement(node);
                 treeElement._editAsHTML();
                 InspectorTest.runAfterPendingDispatches(step2);
 
