--- a/LayoutTests/inspector/elements/highlight-node-scaled.html
+++ b/LayoutTests/inspector/elements/highlight-node-scaled.html
@@ -31,7 +31,7 @@ function onload()
 function test()
 {
     WebInspector.inspectorView.showPanel("elements");
-    WebInspector.panels.elements.treeOutline.addEventListener(WebInspector.ElementsTreeOutline.Events.SelectedNodeChanged, selectedNodeChanged, this);
+    InspectorTest.firstElementsTreeOutline().addEventListener(WebInspector.ElementsTreeOutline.Events.SelectedNodeChanged, selectedNodeChanged, this);
 
     function selectedNodeChanged(event)
     {
