--- a/LayoutTests/inspector/console/shadow-element.html
+++ b/LayoutTests/inspector/console/shadow-element.html
@@ -21,7 +21,7 @@ function test()
 
     function step4(node)
     {
-        WebInspector.panels.elements.revealAndSelectNode(node.shadowRoots()[0].id);
+        WebInspector.panels.elements.revealAndSelectNode(node.shadowRoots()[0]);
         InspectorTest.evaluateInConsoleAndDump("'User agent shadow host: ' + $0.id", step5);
     }
 
