--- a/LayoutTests/inspector/elements/styles/updates-during-dom-traversal.html
+++ b/LayoutTests/inspector/elements/styles/updates-during-dom-traversal.html
@@ -14,7 +14,7 @@ function test()
     function selectCallback()
     {
         InspectorTest.addSniffer(WebInspector.StylesSidebarPane.prototype, "_innerRebuildUpdate", sniffUpdate, true);
-        var element = WebInspector.panels.elements.treeOutline.element;
+        var element = InspectorTest.firstElementsTreeOutline().element;
         for (var i = 0; i < keydownCount; ++i)
             element.dispatchEvent(InspectorTest.createKeyEvent("Up"));
 
